--- a/src/common/css/ant.css
+++ b/src/common/css/ant.css
@@ -1,3 +1,23 @@
+/* 按钮 */
+
+.reload-btn {
+    background-color: #40485b !important;
+}
+
+.reload-btn:hover,
+.reload-btn:focus {
+    color: #40485b !important;
+    border-color: #40485b !important;
+}
+
+
+/* space */
+
+.ant-space-vertical {
+    width: 100%;
+}
+
+
 /* notification */
 
 .ant-notification-notice {
