1. tags 重新加载 2. 优化当前页面全屏,任然显示menu 以及header 3. 优化Transition 包裹 router-view

--- a/src/views/Auth/Group/index.less
+++ b/src/views/Auth/Group/index.less
@@ -1,6 +1,8 @@
 .default-main {
     .container-table {
-        overflow-y: hidden;
+        // overflow-y: hidden;
+
+        overflow: hidden;
 
         .table-form,
         .table-header,
