1. 封装常用Table 2. 修改默认ant样式

--- a/src/common/css/ant.css
+++ b/src/common/css/ant.css
@@ -27,6 +27,10 @@
     width: 300px;
 }
 
+.ant-notification-notice-close {
+    top: 13px;
+}
+
 .ant-notification-topRight {
     top: 16px !important;
     margin-right: 16px !important;
