--- a/src/components/HomeContent/index.less
+++ b/src/components/HomeContent/index.less
@@ -26,6 +26,7 @@
         align-items: center;
         justify-content: center;
         flex-flow: column;
+        // overflow: hidden;
 
         &:hover {
             .working-coffee {
