--- a/src/components/ITable/index.less
+++ b/src/components/ITable/index.less
@@ -26,14 +26,7 @@
             justify-content: space-between;
             align-items: center;
             box-sizing: border-box;
-            padding: 16px;
-        }
-
-        :deep(.ant-table-wrapper) {
-
-            .ant-table-pagination {
-                margin: 16px;
-            }
+            padding-bottom: 16px;
         }
     }
 }
