--- a/src/components/Tags/index.less
+++ b/src/components/Tags/index.less
@@ -29,6 +29,7 @@
             padding: 2px;
             margin-left: 3px;
             cursor: pointer;
+            transition: all .2s;
 
             &:hover {
                 background-color: @primary-color;
