--- a/src/components/Header/index.less
+++ b/src/components/Header/index.less
@@ -10,6 +10,7 @@ header.nav-bar {
         box-shadow: var(--box-shadow-light);
         background-color: #fff;
         border-radius: 8px;
+        overflow: hidden;
 
         .nav-menu-item {
             display: flex;
