--- a/src/components/Layout/index.less
+++ b/src/components/Layout/index.less
@@ -30,7 +30,7 @@
             padding: 16px;
             height: 100%;
             overflow-y: auto;
-            // padding: 16px 0;
+            background-color: transparent;
         }
 
     }
