--- a/src/components/ITable/index.less
+++ b/src/components/ITable/index.less
@@ -1,8 +1,6 @@
 .default-main {
     .container-table {
-        // overflow-y: hidden;
-
-        overflow: hidden;
+        // overflow: hidden;
 
         .table-form,
         .table-header,
