--- a/src/views/User/Group/index.less
+++ b/src/views/User/Group/index.less
@@ -1,4 +1,8 @@
 .default-main {
+    box-sizing: border-box;
+    padding: 16px;
+    background-color: #fff;
+
     .container-table {
         // overflow-y: hidden;
 
