--- a/src/views/Home/components/HomeContent/index.less
+++ b/src/views/Home/components/HomeContent/index.less
@@ -168,8 +168,11 @@
     }
 }
 
-@media screen and (max-width:1200px) {
-    .is1200 {
-        // display: none;
+@media screen and (max-width:576px) {
+    .welcome {
+        flex-flow: column;
+        .welcome-img {
+            margin-bottom: 8px;
+        }
     }
 }
