--- a/src/views/Routine/Config/index.less
+++ b/src/views/Routine/Config/index.less
@@ -1,6 +1,8 @@
 .default-main {
     .main-card {
         // background: #fafafa;
+        overflow: hidden;
+        border-radius: 5px;
 
         /deep/ .ant-tabs-nav {
             background: #fafafa;
