--- a/src/common/css/ant.css
+++ b/src/common/css/ant.css
@@ -153,3 +153,8 @@
 .i-popover-menu .i-popover-item:hover {
   background-color: #f5f5f5;
 }
+
+/* 抽屉 */
+.i-menu-mobile .ant-drawer-content-wrapper .ant-drawer-body {
+  padding: 0;
+}
