--- a/src/components/Layout/index.less
+++ b/src/components/Layout/index.less
@@ -28,7 +28,7 @@
         .layout-view {
             box-sizing: border-box;
             padding: 16px;
-            height: 100%;
+            // height: 100%;
             overflow-y: auto;
             background-color: transparent;
         }
@@ -63,4 +63,11 @@
 .slide-right-leave-to {
     opacity: 0;
     transform: translateX(20px);
+}
+
+
+@media screen and (max-width:1200px) {
+    .container {
+        padding: 0;
+    }
 }
