--- a/src/components/Menu/MenuMobile/index.less
+++ b/src/components/Menu/MenuMobile/index.less
@@ -1,12 +1,10 @@
-.i-menu {
-    // position: fixed;
-    // margin-right: 16px;
-    // border-radius: 4px;
+.i-menu-mobile {
     margin-left: 16px;
     padding-bottom: 0;
     height: calc(100vh - 32px);
     background-color: #fff;
     box-shadow: var(--box-shadow-light);
+
 
     .menu-logo {
         width: 100%;
@@ -17,25 +15,30 @@
         // box-sizing: border-box;
         padding: 10px;
         background: #fff;
+        overflow: hidden;
     }
 
     .logo-img {
-        width: 28px;
+        width: 36px;
+    }
+
+    .logo-name {
+        flex-grow: 1;
+        justify-content: center;
     }
 
     .website-name {
-        flex-grow: 1;
         padding-left: 4px;
-        font-size: 20px;
-        font-weight: 600;
+        font-size: 18px;
+        // font-weight: 600;
         overflow: hidden;
         text-overflow: ellipsis;
         white-space: nowrap;
-        color: @primary-color;
+        // color: @primary-color;
     }
 
     .menu-icon {
-        color: @primary-color;
+        // color: @primary-color;
     }
 
 }
