--- a/src/views/Routine/Info/components/Edit/index.less
+++ b/src/views/Routine/Info/components/Edit/index.less
@@ -2,6 +2,8 @@
     box-sizing: border-box;
     padding: 24px;
     background-color: #fff;
+    border-top: 5px solid var(--primary-color);
+    border-radius: 5px;
 
 
     .edit-head {
