1. 内置行拖拽2

--- a/src/common/css/style.css
+++ b/src/common/css/style.css
@@ -280,3 +280,8 @@ a {
   box-shadow: 0px 12px 32px 4px rgba(0, 0, 0, 0.04),
     0px 8px 20px rgba(0, 0, 0, 0.08);
 }
+
+/* 表格 */
+button.drop-row-btn {
+  cursor: move;
+}
