--- a/src/components/Menu/MenuMobile/index.less
+++ b/src/components/Menu/MenuMobile/index.less
@@ -17,6 +17,9 @@
         background: #fff;
         overflow: hidden;
     }
+    .i-menu-content {
+        overflow: auto;
+    }
 
     .logo-img {
         width: 36px;
@@ -37,16 +40,6 @@
         // color: @primary-color;
     }
 
-    .menu-icon {
-        // color: @primary-color;
-    }
-
-}
-
-.ant-menu {
-    // width: 200px !important;
-    // min-width: 200px;
-    // max-width: 200px;
 }
 
 :deep(.ant-layout-sider-trigger) {
