--- a/src/components/Menu/MenuPc/index.less
+++ b/src/components/Menu/MenuPc/index.less
@@ -1,12 +1,10 @@
 .i-menu {
-    // position: fixed;
-    // margin-right: 16px;
-    // border-radius: 4px;
     margin-left: 16px;
     padding-bottom: 0;
     height: calc(100vh - 32px);
     background-color: #fff;
     box-shadow: var(--box-shadow-light);
+
 
     .menu-logo {
         width: 100%;
@@ -18,6 +16,10 @@
         padding: 10px;
         background: #fff;
         overflow: hidden;
+    }
+
+    .i-menu-content {
+        overflow: auto;
     }
 
     .logo-img {
@@ -39,18 +41,14 @@
         // color: @primary-color;
     }
 
-    .menu-icon {
-        // color: @primary-color;
-    }
 
 }
 
-.ant-menu {
-    // width: 200px !important;
-    // min-width: 200px;
-    // max-width: 200px;
+.i-menu :deep(.ant-layout-sider-children) {
+    display: flex;
+    flex-flow: column;
 }
 
-:deep(.ant-layout-sider-trigger) {
+.i-menu :deep(.ant-layout-sider-trigger) {
     display: none;
 }
