--- a/src/views/Home/components/HomeContent/index.less
+++ b/src/views/Home/components/HomeContent/index.less
@@ -117,6 +117,7 @@
     .user-growth-chart,
     .file-growth-chart {
         height: 260px;
+        overflow: hidden;
     }
 
     :deep(.ant-card-actions) {
