新增 内置搜索

--- a/src/components/ITable/index.less
+++ b/src/components/ITable/index.less
@@ -34,6 +34,11 @@
 
             .i-table-form-default {
                 display: flex;
+                justify-content: space-between;
+
+                .i-table-form {
+                    flex: 1;
+                }
 
                 .i-form-item {
                     margin-bottom: 16px;
