--- a/src/common/css/style.css
+++ b/src/common/css/style.css
@@ -3,9 +3,9 @@
   --box-shadow-light: 0px 0px 12px rgba(0, 0, 0, 0.12);
   --primary-color: #1890ff;
   --fontSize-default: 1.3rem;
-}
+  --success-color: #52c41a; /* 成功色 */
+  --error-color: #f5222d; /* 成功色 */
 
-:root {
   --ba-main-space: 16px;
   --ba-color-primary-light: #3f6ad8;
   --ba-bg-color: #f5f5f5;
