--- a/src/components/Header/index.less
+++ b/src/components/Header/index.less
@@ -6,6 +6,7 @@ header.nav-bar {
     transition: all 0.2s;
 
     .nav-menus {
+        min-width: 300px;
         justify-content: space-around;
         height: 100%;
         box-shadow: var(--box-shadow-light);
