--- a/src/common/css/style.css
+++ b/src/common/css/style.css
@@ -4,7 +4,7 @@
   --primary-color: #1890ff;
   --fontSize-default: 1.3rem;
   --success-color: #52c41a; /* 成功色 */
-  --error-color: #f5222d; /* 成功色 */
+  --error-color: #f5222d; /* 失败色 */
 
   --ba-main-space: 16px;
   --ba-color-primary-light: #3f6ad8;
