--- a/src/common/css/style.css
+++ b/src/common/css/style.css
@@ -13,10 +13,17 @@
   --ba-border-color: #f6f6f6;
 
   --i-box-shadow-light: 0px 0px 12px rgba(0, 0, 0, 0.12);
-  --i-text-color-placeholder: #a8abb2;
 
-  /* 最小宽度 */
-  --min-width-screen: 590px;
+  --i-text-color-primary: #303133;
+  --i-text-color-regular: #606266;
+  --i-text-color-secondary: #909399;
+  --i-text-color-placeholder: #a8abb2;
+  --i-text-color-disabled: #c0c4cc;
+
+  --i-bg-color: #f5f5f5;
+
+  /* 文本溢出换行 */
+  --ellipsis-clamp: 2;
 }
 
 html,
@@ -308,4 +315,25 @@ a {
 /* 表格 */
 button.drop-row-btn {
   cursor: move;
+}
+
+/* 动画 */
+.rotate-animation:hover {
+  cursor: pointer;
+  transform: rotate(666turn);
+  transition: all 59s cubic-bezier(0.34, 0, 0.84, 1) 1s;
+}
+
+/* 文本溢出省略号 */
+.ellipsis {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+.ellipsis_more {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: var(--ellipsis-clamp);
 }
