--- a/src/common/css/style.css
+++ b/src/common/css/style.css
@@ -287,7 +287,13 @@ a {
   line-height: 16px;
   padding-top: 5px;
 }
+/* 头像无限旋转 */
 
+.avatar-turn:hover {
+  cursor: pointer;
+  transform: rotate(666turn);
+  transition: all 59s cubic-bezier(0.34, 0, 0.84, 1) 1s;
+}
 /* 常用动效 */
 
 .suspension {
