--- a/src/common/css/style.css
+++ b/src/common/css/style.css
@@ -289,8 +289,10 @@ a {
 }
 /* 头像无限旋转 */
 
-.avatar-turn:hover {
+.avatar-turn {
   cursor: pointer;
+}
+.avatar-turn:hover {
   transform: rotate(666turn);
   transition: all 59s cubic-bezier(0.34, 0, 0.84, 1) 1s;
 }
