国际化基本配置   登录界面优化

--- a/src/views/Login/index.less
+++ b/src/views/Login/index.less
@@ -24,6 +24,7 @@
   justify-content: center;
 
   .login-box {
+    transition: cubic-bezier(0.075, 0.82, 0.165, 1) 0.3s;
     overflow: hidden;
     width: 430px;
     padding: 0;
