修改全局svg路径 新增消息提醒静态布局

--- a/src/components/Header/components/NavMsg/index.less
+++ b/src/components/Header/components/NavMsg/index.less
@@ -1,1 +1,69 @@
-
+.nav-msg-popover {
+  width: 300px;
+  .ant-popover-content {
+    .ant-popover-inner {
+      .ant-popover-title {
+        font-weight: bold;
+        font-size: 16px;
+      }
+      .ant-popover-inner-content {
+        padding: 0;
+      }
+    }
+  }
+  .nav-msg-content {
+    max-height: 300px;
+    overflow-y: auto;
+    .nav-msg-item {
+      padding: 10px;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      font-size: 13px;
+      &:hover {
+        background: #f5f5f5;
+      }
+      .nav-msg-icon {
+        margin-right: 10px;
+        width: 40px;
+        min-width: 40px;
+        height: 40px;
+        color: #fff;
+        font-size: 18px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background-color: @error-color-sub;
+        border-radius: 50%;
+      }
+      .nav-msg-desc {
+        color: @text-color-default;
+        .title,
+        .time {
+          margin-bottom: 0;
+        }
+        .title {
+          margin-bottom: 6px;
+          line-height: 18px;
+        }
+        .time {
+          font-size: 10px;
+        }
+      }
+    }
+  }
+}
+.nav-menu-item {
+  .msg-icon {
+    position: relative;
+    &::after {
+      content: "";
+      position: absolute;
+      right: -4px;
+      width: 4px;
+      height: 4px;
+      background-color: red;
+      border-radius: 100%;
+    }
+  }
+}
