--- a/src/common/less/theme.less
+++ b/src/common/less/theme.less
@@ -1,12 +1,14 @@
 @primary-color: #1890ff; // 全局主色
 @link-color: #1890ff; // 链接色
-@success-color: #52c41a; // 成功色 
+@success-color: #52c41a; // 成功色
 @warning-color: #faad14; // 警告色
 @error-color: #f5222d; // 错误色
+@error-color-sub: #ea5455; // 错误色 辅色
 @font-size-base: 14px; // 主字号
 @heading-color: rgba(0, 0, 0, 0.85); // 标题色
+@text-color-default: rgba(0, 0, 0); // 默认色
 @text-color: rgba(0, 0, 0, 0.65); // 主文本色
-@text-color-secondary: rgba(0, 0, 0, 0.45); // 次文本色
+@text-color-sub: rgba(0, 0, 0, 0.45); // 次文本色 辅助色
 @disabled-color: rgba(0, 0, 0, 0.25); // 失效色
 @border-radius-base: 4px; // 组件/浮层圆角
 @border-color-base: #d9d9d9; // 边框色
