--- a/src/components/Header/components/NavMsg/index.less
+++ b/src/components/Header/components/NavMsg/index.less
@@ -56,10 +56,11 @@
 .nav-menu-item {
   .msg-icon {
     position: relative;
-    &::after {
+    &.dot::after {
       content: "";
       position: absolute;
-      right: -4px;
+      top: 2px;
+      right: 2px;
       width: 4px;
       height: 4px;
       background-color: red;
