--- a/src/components/Header/index.less
+++ b/src/components/Header/index.less
@@ -120,9 +120,12 @@ header.nav-bar {
 }
 
 @media screen and (max-width: 1200px) {
-  header.nav-bar .nav-menus {
-    box-shadow: none;
-    overflow: inherit;
+  header.nav-bar {
+    padding-right: 0;
+    .nav-menus {
+      box-shadow: none;
+      overflow: inherit;
+    }
   }
 
   .nav-bar {
