新增：不存在的页面都重定向到404 新增：当nav tags 显示滚动条时 可以使用滚轮滚动

--- a/src/common/css/style.css
+++ b/src/common/css/style.css
@@ -104,8 +104,26 @@ a {
 
 /* 常用display */
 
+/* flex */
+.flex,
 .d-flex-default {
   display: flex;
+}
+
+.flex-column {
+  flex-direction: column;
+}
+
+.flex-row {
+  flex-direction: row;
+}
+
+.flex-align-center {
+  align-items: center;
+}
+
+.flex-justify-center {
+  justify-content: center;
 }
 
 .d-flex-center {
