--- a/src/views/Module/components/ModuleMain/components/DetailModal/components/AuthorInfo/index.less
+++ b/src/views/Module/components/ModuleMain/components/DetailModal/components/AuthorInfo/index.less
@@ -1,54 +1,72 @@
 .detail-author {
-    box-sizing: border-box;
-    padding-left: 16px;
-    border-left: 1px solid;
-    border-color: var(--i-bg-color);
+  box-sizing: border-box;
+  padding-left: 16px;
+  border-left: 1px solid;
+  border-color: var(--i-bg-color);
 
-    .author-info {
-        display: flex;
-        align-items: center;
+  .detail-title {
+    font-size: 16px;
+  }
 
-        .author-img {
-            width: 50px;
-            height: 50px;
-            border-radius: 100%;
-            object-fit: cover;
-        }
+  .author-info {
+    display: flex;
+    align-items: center;
 
+    .author-img {
+      width: 50px;
+      height: 50px;
+      border-radius: 100%;
+      object-fit: cover;
     }
+  }
 
-    .author-contact {
-        text-align: center;
-        color: var(--primary-color);
-        cursor: pointer;
+  .author-contact {
+    text-align: center;
+    color: var(--primary-color);
+    cursor: pointer;
+  }
+
+  .author-title {
+    margin: 4px 0;
+    text-align: center;
+    font-weight: bold;
+    color: var(--i-text-color-secondary);
+  }
+
+  .other_works {
+    .other_work-item {
+      box-sizing: border-box;
+      padding: 8px;
+      margin: 4px 0;
+      border-radius: 5px;
+      cursor: pointer;
+
+      &:hover {
+        background-color: var(--i-bg-color);
+      }
+
+      .work-item_img {
+        width: 42px;
+      }
+
+      .work-item_name {
+        flex: 1;
+      }
     }
+  }
+}
 
-    .author-title {
-        margin: 4px 0;
-        text-align: center;
-        font-weight: bold;
-        color: var(--i-text-color-secondary);
-    }
-
+@media screen and (max-width: 900px) {
+  .detail-author {
+    padding-left: 0;
+    border-left: none;
     .other_works {
-        .other_work-item {
-            box-sizing: border-box;
-            padding: 8px;
-            margin: 4px 0;
-            border-radius: 5px;
-            cursor: pointer;
-
-            &:hover {
-                background-color: var(--i-bg-color);
-            }
-
-            .work-item_img {
-                width: 42px;
-            }
-
-            .work-item_name {
-                flex: 1;
-            }
+      .other_work-item {
+        .work-item_img {
+          width: 100px;
+          margin-right: 12px;
         }
+      }
     }
+  }
 }
