--- a/src/views/Module/components/ModuleMain/components/DetailModal/index.less
+++ b/src/views/Module/components/ModuleMain/components/DetailModal/index.less
@@ -1,10 +1,23 @@
 .detail-main {
+  .main-left {
+    flex: 1;
+  }
 
+  .main-right {
+    width: 20%;
+  }
+}
+
+@media screen and (max-width: 900px) {
+  .detail-main {
+    flex-direction: column;
     .main-left {
-        flex: 1;
+      margin-bottom: 16px;
     }
-
     .main-right {
-        width: 20%;
+      padding-top: 12px;
+      width: 100%;
+      border-top: 1px solid rgba(0, 0, 0, 0.1);
     }
+  }
 }
