--- a/src/components/ITable/index.css
+++ b/src/components/ITable/index.css
@@ -25,8 +25,10 @@
 .default-main .container-table .i-table-form .i-table-form-default {
   display: flex;
   justify-content: space-between;
+  padding: 12px;
+  border: 1px solid #f0f0f0;
 }
-.default-main .container-table .i-table-form .i-table-form-default .i-table-form {
+.default-main .container-table .i-table-form .i-table-form-default .i-table-form-search {
   flex: 1;
 }
 .default-main .container-table .i-table-form .i-table-form-default .i-form-item {
