--- a/src/components/ITable/index.less
+++ b/src/components/ITable/index.less
@@ -19,9 +19,6 @@
       overflow-x: auto;
     }
 
-    .i-table {
-    }
-
     .i-table-form {
       box-sizing: border-box;
       // padding: 16px;
@@ -35,8 +32,11 @@
       .i-table-form-default {
         display: flex;
         justify-content: space-between;
+        padding: 12px;
+        // border: 1px solid #d9d9d9;
+        border: 1px solid #f0f0f0;
 
-        .i-table-form {
+        .i-table-form-search {
           flex: 1;
         }
 
