修复已知问题 新增：主题按钮 未完成

--- a/src/components/Header/index.css
+++ b/src/components/Header/index.css
@@ -12,6 +12,7 @@ header.nav-bar .nav-menus {
   background-color: #fff;
   border-radius: 8px;
   overflow: hidden;
+  font-size: 18px;
 }
 header.nav-bar .nav-menus .nav-menu-item {
   display: flex;
