--- a/src/components/Header/index.less
+++ b/src/components/Header/index.less
@@ -13,6 +13,7 @@ header.nav-bar {
     background-color: #fff;
     border-radius: 8px;
     overflow: hidden;
+    font-size: 18px;
 
     .nav-menu-item {
       display: flex;
