--- a/src/components/ITable/index.less
+++ b/src/components/ITable/index.less
@@ -17,6 +17,10 @@
       align-items: center;
       box-sizing: border-box;
       overflow-x: auto;
+      :deep(.anticon-spin) {
+        width: 1em;
+        height: 1em;
+      }
     }
 
     .i-table-form {
