新增：部分主题颜色配置

--- a/src/components/Header/components/TagsPc/index.less
+++ b/src/components/Header/components/TagsPc/index.less
@@ -21,6 +21,8 @@
       opacity: 0.7;
       user-select: none;
       white-space: nowrap;
+      color: var(--primary-text-color);
+      transition: all 0.2s;
 
       &:hover {
         opacity: 1;
@@ -45,7 +47,7 @@
     z-index: 0;
     height: 40px;
     border-radius: 4px;
-    background-color: #fff;
+    background-color: var(--primary-color);
     box-shadow: var(--box-shadow-light);
     transition: all 0.2s;
     -webkit-transition: all 0.2s;
