--- a/src/components/Header/index.less
+++ b/src/components/Header/index.less
@@ -14,6 +14,7 @@ header.nav-bar {
     border-radius: 8px;
     overflow: hidden;
     font-size: 18px;
+    background-color: var(--primary-bg-color);
 
     .nav-menu-item {
       display: flex;
