--- a/src/common/css/ant.css
+++ b/src/common/css/ant.css
@@ -201,6 +201,11 @@ button.ant-btn {
   padding: 16px;
 }
 
+/* layout */
+.ant-layout {
+  background-color: var(--primary-bg-color);
+}
+
 @media screen and (max-width: 575px) {
   .ant-form.ant-form-vertical .ant-form-item,
   .ant-modal-body .ant-form .ant-form-item {
