--- a/src/common/less/theme.less
+++ b/src/common/less/theme.less
@@ -13,3 +13,16 @@
 @border-radius-base: 4px; // 组件/浮层圆角
 @border-color-base: #d9d9d9; // 边框色
 @box-shadow-base: 0 2px 8px rgba(0, 0, 0, 0.15); // 浮层阴影
+
+[data-theme="light"] {
+  --primary-bg-color: #f5f5f5;
+  --primary-color: #fff;
+  --primary-text-color: rgba(0, 0, 0);
+  --primary-text-color-sub: rgba(0, 0, 0, 0.85);
+}
+[data-theme="dark"] {
+  --primary-bg-color: #161d31;
+  --primary-color: #283046;
+  --primary-text-color: rgba(255, 255, 255);
+  --primary-text-color-sub: rgba(255, 255, 255, 0.85);
+}
