--- a/src/components/Layout/index.less
+++ b/src/components/Layout/index.less
@@ -1,39 +1,41 @@
+
 .container {
+  box-sizing: border-box;
+  padding: 16px 0;
+  padding-bottom: 0;
+  width: 100%;
+  height: 100%;
+  min-height: 100%;
+  background-color: var(--primary-bg-color);
+
+  .layout {
     box-sizing: border-box;
-    padding: 16px 0;
-    padding-bottom: 0;
-    width: 100%;
+    flex: 1;
     height: 100%;
-    min-height: 100%;
+    transition: all 0.2s;
+    background-color: transparent;
 
-    .layout {
-        box-sizing: border-box;
-        flex: 1;
-        height: 100%;
-        transition: all 0.2s;
-
-        // 全屏
-        .fullScreen {
-            position: fixed;
-            top: 0;
-            bottom: 0;
-            left: 0;
-            right: 0;
-            z-index: 10;
-            box-sizing: border-box;
-            padding: 16px !important;
-            background-color: var(--bgColor);
-        }
-
-        .layout-view {
-            box-sizing: border-box;
-            padding: 16px;
-            // height: 100%;
-            overflow-y: auto;
-            background-color: transparent;
-        }
-
+    // 全屏
+    .fullScreen {
+      position: fixed;
+      top: 0;
+      bottom: 0;
+      left: 0;
+      right: 0;
+      z-index: 10;
+      box-sizing: border-box;
+      padding: 16px !important;
+      background-color: var(--bgColor);
     }
+
+    .layout-view {
+      box-sizing: border-box;
+      padding: 16px;
+      // height: 100%;
+      overflow-y: auto;
+      background-color: transparent;
+    }
+  }
 }
 
 // slide-right
@@ -50,24 +52,23 @@
 
 .slide-right-enter-active,
 .slide-right-leave-active {
-    will-change: transform;
-    transition: all 0.3s ease;
+  will-change: transform;
+  transition: all 0.3s ease;
 }
 
 // slide-right
 .slide-right-enter-from {
-    opacity: 0;
-    transform: translateX(-20px);
+  opacity: 0;
+  transform: translateX(-20px);
 }
 
 .slide-right-leave-to {
-    opacity: 0;
-    transform: translateX(20px);
+  opacity: 0;
+  transform: translateX(20px);
 }
 
-
-@media screen and (max-width:1200px) {
-    .container {
-        padding: 0;
-    }
+@media screen and (max-width: 1200px) {
+  .container {
+    padding: 0;
+  }
 }
