--- a/src/components/SiderBar/components/SiderBarMenu/index.less
+++ b/src/components/SiderBar/components/SiderBarMenu/index.less
@@ -6,7 +6,7 @@
   justify-content: center;
   // box-sizing: border-box;
   padding: 10px;
-  background: #fff;
+  // background: #fff;
   overflow: hidden;
 }
 
@@ -21,6 +21,11 @@
 .logo-name {
   flex-grow: 1;
   justify-content: center;
+}
+
+.logo-name,
+.menu-icon {
+  color: var(--primary-text-color);
 }
 
 .website-name {
