--- a/src/common/css/ant.css
+++ b/src/common/css/ant.css
@@ -132,7 +132,18 @@ button.ant-btn {
 }
 
 /* menu 卡片 */
-
+.ant-menu,
+.ant-menu .ant-menu-sub.ant-menu-inline {
+  background-color: var(--primary-color) !important;
+}
+.ant-menu:not(.ant-menu-horizontal) .ant-menu-item-selected {
+  background-color: var(--primary-bg-color-selected) !important;
+}
+.ant-menu .ant-menu-item,
+.ant-menu .ant-menu-submenu,
+.ant-menu .ant-menu-submenu .ant-menu-submenu-arrow {
+  color: var(--primary-text-color);
+}
 .ant-menu-title-content {
   user-select: none;
 }
@@ -156,21 +167,27 @@ button.ant-btn {
   width: 100%;
 }
 
+/* a-popover */
+.ant-popover-content .ant-popover-arrow-content {
+  background-color: var(--primary-color);
+}
+
 /* i-popover-menu */
 .i-popover-menu .ant-popover-inner-content {
   padding: 0;
   padding-top: 4px;
+  background-color: var(--primary-color);
 }
 
 .i-popover-menu .i-popover-item {
   text-align: center;
   padding: 7px 20px;
   cursor: pointer;
-  color: #000;
+  color: var(--primary-text-color);
   user-select: none;
 }
 .i-popover-menu .i-popover-item:hover {
-  background-color: #f5f5f5;
+  background-color: var(--primary-bg-color);
 }
 
 /* 抽屉 */
