--- a/src/common/css/style.css
+++ b/src/common/css/style.css
@@ -8,7 +8,7 @@
 
   --ba-main-space: 16px;
   --ba-color-primary-light: #3f6ad8;
-  --ba-bg-color: #f5f5f5;
+  --ba-bg-color: var(--primary-bg-color);
   --ba-bg-color-overlay: #ffffff;
   --ba-border-color: #f6f6f6;
 
@@ -20,7 +20,7 @@
   --i-text-color-placeholder: #a8abb2;
   --i-text-color-disabled: #c0c4cc;
 
-  --i-bg-color: #f5f5f5;
+  --i-bg-color: var(--primary-bg-color);
 
   /* 文本溢出换行 */
   --ellipsis-clamp: 2;
@@ -35,7 +35,7 @@ body,
   font-size: 14px;
   font-family: Helvetica Neue, Helvetica, PingFang SC, Hiragino Sans GB,
     Microsoft YaHei, SimSun, sans-serif;
-  /* background-color: #f5f5f5; */
+  /* background-color: var(--primary-bg-color); */
 }
 
 /*里面的代码可以根据自己需求去进行更改*/
