--- a/src/common/less/theme.less
+++ b/src/common/less/theme.less
@@ -16,13 +16,17 @@
 
 [data-theme="light"] {
   --primary-bg-color: #f5f5f5;
+  --primary-bg-color-selected: rgba(245, 245, 245, 0.85);
   --primary-color: #fff;
   --primary-text-color: rgba(0, 0, 0);
   --primary-text-color-sub: rgba(0, 0, 0, 0.85);
+  --box-shadow-light: 0px 0px 12px rgba(0, 0, 0, 0.12);
 }
 [data-theme="dark"] {
   --primary-bg-color: #161d31;
+  --primary-bg-color-selected: rgba(22, 29, 49, 0.85);
   --primary-color: #283046;
   --primary-text-color: rgba(255, 255, 255);
   --primary-text-color-sub: rgba(255, 255, 255, 0.85);
+  --box-shadow-light: 0px 0px 12px rgba(255, 255, 255, 0.12);
 }
