--- a/src/components/Header/components/NavInfo/index.css
+++ b/src/components/Header/components/NavInfo/index.css
@@ -6,7 +6,7 @@
   cursor: pointer;
 }
 .admin-info:hover {
-  background: #f5f5f5;
+  background: var(--primary-bg-color);
 }
 .admin-info .admin-name {
   padding-left: 6px;
