--- a/src/components/Header/components/NavMsg/index.less
+++ b/src/components/Header/components/NavMsg/index.less
@@ -21,7 +21,7 @@
       justify-content: space-between;
       font-size: 13px;
       &:hover {
-        background: #f5f5f5;
+        background: var(--primary-bg-color);
       }
       .nav-msg-icon {
         margin-right: 10px;
