--- a/src/components/Header/components/TagsPc/index.less
+++ b/src/components/Header/components/TagsPc/index.less
@@ -83,7 +83,7 @@
         }
         //   font-weight: bold;
         &:hover {
-          background-color: #f5f5f5;
+          background-color: var(--primary-bg-color);
         }
         &.active {
           color: #fff;
