--- a/src/components/Header/index.css
+++ b/src/components/Header/index.css
@@ -31,7 +31,7 @@ header.nav-bar .nav-menus .nav-menu-item .msg-icon {
   animation-delay: 0.5s;
 }
 header.nav-bar .nav-menus .nav-menu-item:hover {
-  background: #f5f5f5;
+  background: var(--primary-bg-color);
 }
 header.nav-bar .nav-menus .nav-menu-item:hover .anticon {
   animation: smallToLast 0.3s ease-out forwards;
