--- a/src/components/SiderBar/index.less
+++ b/src/components/SiderBar/index.less
@@ -1,19 +1,18 @@
 .i-menu,
 .i-menu-mobile {
-    margin-left: 16px;
-    padding-bottom: 0;
-    height: calc(100vh - 32px);
-    background-color: #fff;
-    box-shadow: var(--box-shadow-light);
-
+  margin-left: 16px;
+  padding-bottom: 0;
+  height: calc(100vh - 32px);
+  background-color: var(--primary-color);
+  box-shadow: var(--box-shadow-light);
 }
 
 .i-menu :deep(.ant-layout-sider-children) {
-    display: flex;
-    flex-flow: column;
+  display: flex;
+  flex-flow: column;
 }
 
 .i-menu :deep(.ant-layout-sider-trigger),
 .i-menu-mobile :deep(.ant-layout-sider-trigger) {
-    display: none;
+  display: none;
 }
