--- a/src/components/Header/components/TagsMobile/index.less
+++ b/src/components/Header/components/TagsMobile/index.less
@@ -6,5 +6,11 @@
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
+    a {
+      color: var(--primary-text-color-sub);
+    }
+    span:last-child {
+      color: var(--primary-text-color);
+    }
   }
 }
