--- a/src/components/Header/index.less
+++ b/src/components/Header/index.less
@@ -3,7 +3,7 @@ header.nav-bar {
   height: 50px;
   min-height: 50px;
   // background-color: var(--bgColor) !important;
-  transition: all 0.2s;
+  // transition: all var(--default-transition-delay);
 
   .nav-menus {
     min-width: 300px;
@@ -132,6 +132,7 @@ header.nav-bar {
   }
 
   .nav-bar {
-    background-color: #fff;
+    background-color: var(--primary-color);
+    color: var(--primary-text-color);
   }
 }
