--- a/src/components/ITable/index.less
+++ b/src/components/ITable/index.less
@@ -5,7 +5,7 @@
     .table-form,
     .table-header,
     .ant-table-wrapper {
-      background-color: #fff;
+      background-color: var(--primary-color);
     }
 
     .table-header {
@@ -20,6 +20,9 @@
       :deep(.anticon-spin) {
         width: 1em;
         height: 1em;
+      }
+      .table-header_search {
+        background-color: var(--primary-color);
       }
     }
 
